--- a/css/_media.sass
+++ b/css/_media.sass
@@ -1,8 +1,3 @@
-*
-    outline: 1px solid red
-    opacity: 1 !important
-    visibility: visible !important
-    
 @media (max-width:1050px)
     html
         width: 100vw
@@ -14,10 +9,12 @@
         width: 100vw
         grid-template-columns: 1fr
         grid-template-areas: "nav" "main" "dark" "content" "light"
-        grid-template-rows: 2fr 0.5fr 1fr 0.5fr 1fr
+        grid-template-rows: 500px 450px 300px 250px 300px
+        // grid-template-rows: 2fr 0.5fr 1fr 0.5fr 1fr
         // grid-template-rows: 10fr 3fr 4fr 2fr 4fr
         header
             grid-area: nav
+            // max-height: 500px
         main
             grid-area: main
         .light
@@ -27,7 +24,6 @@
         .dark
             grid-area: dark
         .light,.dark
-            height: 300px
             width: 100%
         header,main,.content,.light,.dark
             width: 100%
