--- a/css/_media.sass
+++ b/css/_media.sass
@@ -13,8 +13,29 @@
         // grid-template-rows: 2fr 0.5fr 1fr 0.5fr 1fr
         // grid-template-rows: 10fr 3fr 4fr 2fr 4fr
         header
+            display: flex
+            justify-content: flex-start
             grid-area: nav
-            // max-height: 500px
+            position: relative
+            nav
+                display: none
+                position: absolute
+                justify-content: space-evenly
+                transform: translateX(-25px)
+                align-items: center
+                background: white
+                width: 100%
+                height: 100px
+                top: 0
+                left: 0
+                a
+                    color: grey
+
+            .fa-bars
+                display: inline
+            .logo
+                justify-self: center
+                flex: 1
         main
             grid-area: main
         .light
@@ -34,3 +55,9 @@
         bottom: 0
         left: unset
         right: 0
+        .control
+            height: 80px
+            width: 80px
+
+    .wrapper header nav.show
+        display: flex
