--- a/css/home.css
+++ b/css/home.css
@@ -58,6 +58,7 @@ body {
 
 .wrapper header .fa-bars {
   display: none;
+  color: white;
   cursor: pointer;
   z-index: 3;
 }
@@ -179,8 +180,8 @@ body {
   margin-left: 15px;
   -webkit-transform: translateY(-2px);
           transform: translateY(-2px);
-  -webkit-transition: all 300ms ease-in-out;
-  transition: all 300ms ease-in-out;
+  -webkit-transition: all 500ms ease-in-out;
+  transition: all 500ms ease-in-out;
 }
 
 .wrapper main > span {
@@ -291,6 +292,30 @@ body {
   font-size: 50px;
 }
 
+.hamburger {
+  display: none;
+  margin: 5px 30px;
+  width: 30px;
+  height: 25px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  cursor: pointer;
+  z-index: 3;
+}
+
+.hamburger .bar {
+  height: 5px;
+  width: 30px;
+  background: white;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+
 @media (max-width: 1050px) {
   html {
     width: 100vw;
@@ -320,6 +345,7 @@ body {
     position: relative;
   }
   .wrapper header nav {
+    padding-left: 5em;
     display: none;
     position: absolute;
     -webkit-box-pack: space-evenly;
@@ -336,8 +362,11 @@ body {
     top: 0;
     left: 0;
   }
-  .wrapper header nav a {
+  .wrapper header nav a.links {
     color: grey;
+  }
+  .wrapper header nav a.links:hover {
+    border-bottom: 3px solid grey;
   }
   .wrapper header .fa-bars {
     display: inline;
@@ -389,6 +418,14 @@ body {
     width: 80px;
   }
   .wrapper header nav.show {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .wrapper header nav.show i.fa-bars {
+    color: gray;
+  }
+  .hamburger {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
