--- a/css/home.sass
+++ b/css/home.sass
@@ -15,7 +15,7 @@ body
     header
         .fa-bars
             display: none
-            // color: white
+            color: white
             cursor: pointer
             z-index: 3
         position: relative
@@ -84,7 +84,7 @@ body
             i
                 margin-left: 15px
                 transform: translateY(-2px)
-                transition: all 300ms ease-in-out
+                transition: all 500ms ease-in-out
         & > span
             font-size: 0.8rem
             margin: 0.6em
@@ -142,6 +142,21 @@ body
         i
             color: white
             font-size: 50px
+
+.hamburger
+    display: none
+    margin: 5px 30px
+    width: 30px
+    height: 25px
+    flex-direction: column
+    justify-content: space-between
+    cursor: pointer
+    z-index: 3
+    .bar
+        height: 5px
+        width: 30px
+        background: white
+        transition: all 300ms ease-in-out
 
 
 @import 'media'
